--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ a {
 }
 
 .logo-header img {
+	display: block;
 	padding-top: 13px;
 	padding-right: 57px;
 	padding-bottom: 11px;
@@ -164,6 +165,8 @@ a {
 	line-height: 21px;
 	color: #000000;
 	background-color: #ffffff;
+	padding-right: 24px;
+	padding-left: 24px;
 }
 
 .button-login:hover {
@@ -217,19 +220,31 @@ a {
 .promo-block {
 	color: #ffffff;
 	width: 300px;
-	height: 123px;
+}
+
+.promo-inner {
+	padding-left: 22px;
+	padding-top: 21px;
+	padding-bottom: 28px;
+}
+
+.promo-inner p {
+	padding-bottom: 20px;
 }
 
 .promo-block p {
 	font-size: 24px;
 	line-height: 30px;
+	margin: 0;
 }
 
 .button-promo {
 	line-height: 18px;
 	width: 135px;
-	height: 38px;
-	background-color: rgba(0,0,0,0.1);
+	padding: 10px 24px;
+	padding-top: 11px;
+	margin-left: 3px;
+	background-color: rgba(0,0,0,0.1);  
 	border-radius: 3px;}
 
 .button-promo:hover {
@@ -266,6 +281,8 @@ a {
 	color: #32425c;
 	text-transform: uppercase;
 	padding: 30px;
+	padding-bottom: 29px;
+	padding-left: 28px;
 }
 
 .title-line {
@@ -284,7 +301,6 @@ a {
 
 .product-item {
 	width: 220px;
-	height: 318px;
 }
 
 .panel {
@@ -300,7 +316,7 @@ a {
 }
 
 /*этот стиль еще будет дорабатываться*/
-.brand-list .panel:active {
+.brand-list a:active {
 	opacity: 0.3;
 }
 
@@ -321,7 +337,17 @@ a {
 	line-height: 20px;
 	color: #000000;
 	text-align: center;
-	margin-top: 0;
+	margin: 0;
+}
+
+.item-name {
+	padding-top: 5px;
+	padding-bottom: 11px;
+}
+
+.crossed, 
+.product-item .button-price {
+	margin-left: 2px;
 }
 
 .item-actions a {
@@ -370,22 +396,37 @@ a {
 	color: #a9a9a9;
 	text-decoration: line-through;
 	display: block;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 
 .product-item .button-price {
+	display: block;
 	font-size: 17px;
 	line-height: 18px;
-	padding: 8px 50px;
 	color: #ffffff;
+
+	padding-top: 10px;
+	padding-bottom: 31px;
 	background-image: url("../img/btn-price.svg");
 	background-repeat: no-repeat;
-	background-position: center top;
+	background-position: 41px top;
 }
 
-.brand-list li {
+.brand-list {
+	display: flex;
+}
+
+.brands-item a {
+	display: flex;
 	width: 220px;
 	height: 145px;
+	
+}
+
+.brands-item img {
+	display: flex;
+	margin: auto;
+	align-items: center;
 }
 
 .services {
@@ -415,9 +456,10 @@ a {
 
 .button-service {
 	width: 240px;
-	height: 62px;
-	text-align: left;
+	padding-top: 14px;
+	padding-bottom: 18px;
 	padding-left: 22px;
+	text-align: left;
 	font-size: 21px;
 	line-height: 30px;
 	color: #ffffff;
@@ -430,6 +472,11 @@ a {
 .button-service:hover {
 	background-color: #293449;
 	color: #ffffff;
+}
+
+.button-service:active {
+	background-color: #ffffff;
+	color: #32425c;
 }
 
 .service-current {
