--- a/css/style.css
+++ b/css/style.css
@@ -34,23 +34,19 @@ a {
 	text-align: center;
 	vertical-align: middle;
 	padding-top: 10px;
-	padding-right: 20px;
 	padding-bottom: 10px;
-	padding-left: 20px;
 	border: none;
 	color: #ffffff;
 }
 
 .button {
+	display: block;
+	width: 192px;
 	font-size: 14px;
 	line-height: 18px;
 	background-color: #ee3643;
-	border-radius: 3px;
 	padding-top: 11px;
-}
-
-.button:hover {
-	background-color: #ca2c37;
+	padding-bottom: 9px;
 }
 
 .button:active {
@@ -59,7 +55,7 @@ a {
 
 .header {
 	background-color: #f4f7f9;
-	background-image: url("../img/services-background.jpg");
+	background-image: url("../img/services-background.png");
 	background-repeat: repeat;
 	background-position: 0 0;
 }
@@ -69,31 +65,31 @@ a {
 }
 
 .logo img {
-	box-shadow: 0 5px 0 0 #b52933;
 	background-color: #ee3643;
+	box-shadow: inset 0 -5px 0 0 rgba(0,0,0,0.24);
 }
 
 .logo img:hover {
-	background-color: #ca2c37;
-	box-shadow: 0 5px 0 0 #9a212a;
+	background-color: #ee3643;
+	box-shadow: inset 0 -5px 0 0 rgba(0,0,0,0.24);
 }
 
 .logo img:active {
 	background-color: #ba2732;
-	box-shadow: 0 5px 0 0 #8e1e26;
+	box-shadow: inset 0 -5px 0 0 rgba(0,0,0,0.24);
 }
 
 .logo-header img {
 	display: block;
-	padding-top: 13px;
+	padding-top: 12px;
 	padding-right: 57px;
-	padding-bottom: 11px;
+	padding-bottom: 17px;
 	padding-left: 55px;
 }
 
 .user-nav {
-	font-size: 17px;
-	line-height: 18px;
+	font-size: 18px;
+	line-height: 24px;
 }
 
 .header .btn {
@@ -101,29 +97,8 @@ a {
 	background-color: #293449;
 }
 
-.button-bookmarks:hover,
-.button-cart:hover {
-	background-color: #212a3a;
-}
-
-.button-bookmarks:active,
-.button-cart:active {
-	background-color: #161d29;
-}
-
-.header .has-item {
-	background-color: #ee3643;
-}
-
-.header .has-item:hover {
-	background-color: #ca2c37;
-}
-
-.header .has-item:active {
-	background-color: #ba2732;
-}
-
 .header .button-order {
+	width: 150px;
 	background-color: #63a63e;
 }
 
@@ -131,8 +106,28 @@ a {
 	background-color: #5fbb2d;
 }
 
+.button-bookmarks:active,
+.button-cart:active {
+	background-color: #161d29;
+	color: rgba(255,255,255,0.5);
+}
+
 .button-order:active {
-	background-color: #518534;
+	background-color: #63a63e;
+	color: rgba(255,255,255,0.5);
+}
+
+.header .has-item {
+	background-color: #ee3643;
+}
+
+/* проверить цвет фона и иконки корзины*/
+.header .has-item:hover {
+	background-color: #ee3643;
+}
+
+.header .has-item:active {
+	background-color: #ba2732;
 }
 
 .header .description {
@@ -142,17 +137,22 @@ a {
 	color: #ee3643;
 }
 
+/* проверить выравнивание */
 .header-contacts {
 	text-align: center;
 	vertical-align: middle;
 }
 
 .header-contacts a {
+	box-sizing: border-box;
 	font-size: 21px;
-	line-height: 21px;
+	line-height: 30px;
 	color: #ee3643;
-	padding: 5px 50px;
-
+	font-weight: 700;
+	padding-top: 7px;
+	padding-right: 45px;
+	padding-bottom: 8px;
+	padding-left: 74px;
 	border: 3px solid #ffffff;
 }
 
@@ -160,13 +160,13 @@ a {
 	color: #32425c;
 }
 
+/* проверить паддинги */
 .login-block .button-login {
 	font-size: 21px;
 	line-height: 21px;
 	color: #000000;
 	background-color: #ffffff;
-	padding-right: 24px;
-	padding-left: 24px;
+	padding: 12px 24px;
 }
 
 .button-login:hover {
@@ -178,14 +178,13 @@ a {
 }
 
 .button-login:active {
-	color: rgba(0, 0, 0, 0.3);
+	color: #c5c5c5;
 }
 
 .acc-links a {
 	font-size: 16px;
 	line-height: 18px;
 	color: #32425c;
-	text-decoration: underline;
 }
 
 .acc-links a:hover {
@@ -193,13 +192,14 @@ a {
 }
 
 .acc-links a:active {
-	color: #32425c;
-	opacity: 0.3;
+	color: #c5c5c5;
 }
 
 .header-nav a {
-	font-size: 17px;
-	line-height: 17px;
+	font-size: 18px;
+	line-height: 24px;
+	padding-top: 16px; 
+	padding-bottom: 20px; 
 }
 
 .nav-list {
@@ -208,12 +208,14 @@ a {
 	box-shadow: inset 0 -5px 0 0 #293449;
 }
 
-.nav-list li:hover {
+.nav-list a:hover {
 	background-color: #293449;
 }
 
-.nav-list li:active {
+.nav-list a:active {
+	color: rgba(255,255,255,0.5);
 	background-color: #1d2739;
+	box-shadow: inset 0 -5px 0 0 #293449;
 }
 
 /*---MAIN---*/
@@ -225,11 +227,12 @@ a {
 .promo-inner {
 	padding-left: 22px;
 	padding-top: 21px;
-	padding-bottom: 28px;
+	padding-bottom: 21px;
 }
 
+/* проверить внутренний отступ*/
 .promo-inner p {
-	padding-bottom: 20px;
+	padding-bottom: 13px;
 }
 
 .promo-block p {
@@ -239,21 +242,23 @@ a {
 	margin: 0;
 }
 
+/* проверить ширину кнопки*/
 .button-promo {
+	display: block;
 	line-height: 18px;
 	width: 135px;
-	padding: 10px 24px;
-	padding-top: 11px;
-	margin-left: 3px;
-	background-color: rgba(0,0,0,0.1);  
-	border-radius: 3px;}
+	padding top: 10px;
+	padding-bottom: 10px;
+	text-align: center;
+	background-color: rgba(255,255,255,0.3); 
+}
 
 .button-promo:hover {
-	background-color: rgba(0,0,0,0.2);
+	background-color: rgba(197,197,197,0.3);
 }
 
 .button-promo:active {
-	background-color: rgba(0,0,0,0.3);
+	background-color: rgba(169,169,169,0.3);
 }
 
 .material {
@@ -289,19 +294,19 @@ a {
 
 .page-desc .section-title {
 	color: #000000;
-	font-kerning: none;
-	padding-top: 68px;
+	padding-top: 65px;
 	padding-bottom: 0px;
 	padding-left: 0px;
 	margin: 0;
 }
 
-.page-desc .text {
-	font-kerning: none;
-}
-
 .title-line {
 	background-color: #f9f5f0;
+}
+
+.page-desc .section-title,
+.page-desc .text {
+	font-kerning: none;
 }
 
 .product-list,
@@ -314,33 +319,51 @@ a {
 	list-style: none;
 }
 
+.product-list {
+	display: flex;
+}
+
 .product-item {
-	width: 220px;
+	display: flex;
+	flex-direction: column;
+	flex-shrink: 0;
+	justify-content: flex-start;
+	flex-basis: 220px;
+	height: 318px;
+	margin-right: 20px;
 }
 
 .panel {
+	background-color: #ffffff;
 	box-shadow: inset 0 0 0 1px #eaeaea;
 }
 
 .panel:hover {
-	box-shadow: 0 10px 25px 0 rgba(41,52,73, 0.5)
+	box-shadow: inset 0 0 0 1px #eaeaea,
+	0 4px 20px 0 rgba(0,0,0,0.15);
 }
 
 .brand-list .panel:active {
-	box-shadow: 0 4px 10px 0 rgba(41,52,73, 0.5)
-}
-
-/*этот стиль еще будет дорабатываться*/
-.brand-list a:active {
-	opacity: 0.3;
+	opacity: 0.5;
 }
 
 .item-face {
-	min-height: 170px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	flex-basis: 180px;
 }
 
-.product-image img {
-	margin-top: 1px;
+/* проверить необходимость доп выравниваний*/
+.bosch-3000 {
+	padding-right: 13px;
+	margin-top: -6px;
+}
+
+/* проверить - добавить управление высотой кнопок товара от верхней границы карточки*/
+.product-image {
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .product-item,
@@ -352,23 +375,42 @@ a {
 	line-height: 20px;
 	color: #000000;
 	text-align: center;
+}
+
+.item-actions {
+	display: flex;
+	flex-direction: column;
+	flex-basis: 100%;
+	margin-top: 38px;
+}
+
+.item-name p {
 	margin: 0;
+	margin-bottom: 1px;
 }
 
 .item-name {
-	padding-top: 5px;
-	padding-bottom: 11px;
+	margin-top: 0px;
+	margin-bottom: 7px;
 }
 
+/* проверить внешний отступ*/
 .crossed, 
 .product-item .button-price {
 	margin-left: 2px;
 }
 
 .item-actions a {
+	box-sizing: border-box;
 	font-family: "Cuprum", "Arial", sans-serif;
 	font-size: 14px;
 	line-height: 18px;
+	width: 135px;
+	margin-left: 41px;
+}
+
+.item-actions a:first-child {
+	margin-bottom: 10px;
 }
 
 .item-actions .button-buy {
@@ -376,7 +418,7 @@ a {
 	color: #ffffff;
 	background-color: #63a63e;
 	box-shadow: inset 0 -3px 0 0 #367315;
-	border-radius: 3px;
+	border-radius: 2px;
 }
 
 .item-actions .button-buy:hover {
@@ -385,25 +427,22 @@ a {
 
 .item-actions .button-buy:active {
 	background-color: #518534;
-	box-shadow: none;
 }
 
 .item-actions .button-bookmark {
 	font-weight: 400;
 	color: #32425c;
 	box-shadow: inset 0 0 0 3px #63a63e;
-	border-radius: 3px;
+	border-radius: 2px;
 }
 
 .item-actions .button-bookmark:hover {
 	box-shadow: inset 0 0 0 3px #32425c;
-	border-radius: 3px;
 }
 
 .item-actions .button-bookmark:active {
 	box-shadow: inset 0 0 0 3px #32425c;
-	border-radius: 3px;
-	opacity: 0.3;
+	opacity: 0.5;
 }
 
 .crossed {
@@ -413,9 +452,10 @@ a {
 	color: #a9a9a9;
 	text-decoration: line-through;
 	display: block;
-	margin-bottom: 10px;
+	margin-bottom: 13px;
 }
 
+/*проверить как сделан фон у кнопки*/
 .product-item .button-price {
 	display: block;
 	font-size: 17px;
@@ -423,34 +463,38 @@ a {
 	color: #ffffff;
 
 	padding-top: 10px;
-	padding-bottom: 31px;
 	background-image: url("../img/btn-price.svg");
 	background-repeat: no-repeat;
-	background-position: 41px top;
+	background-position: 43px top;
+	margin-bottom: 21px;
+}
+
+.product-item:hover .button-price {
+	color: rgba(255,255,255,0.5);
 }
 
 .brand-list {
 	display: flex;
 }
 
-.brands-item a {
+.brands-item {
 	display: flex;
-	width: 220px;
-	height: 145px;
-	
+	flex-basis: 220px;
+	flex-shrink: 0;
+	margin-right: 20px;
 }
 
-.brands-item img {
+.brands-item a {
 	display: flex;
-	margin: auto;
+	flex-basis: 220px;
+	flex-shrink: 0;
+	height: 145px;
+	justify-content: center;
 	align-items: center;
 }
 
 .services {
-	background-color: #f4f7f9;
-	background-image: url("../img/services-background.jpg");
-	background-repeat: repeat;
-	background-position: 0 0;
+	background-color: #f1f5f7;
 }
 
 .services .section-title {
@@ -473,18 +517,19 @@ a {
 
 .button-service {
 	font-size: 21px;
+	line-height: 30px;
 	color: #ffffff;
 	font-weight: 700;
+	background-color: #32425c;
 	width: 240px;
-	padding-top: 14px;
-	padding-bottom: 18px;
+	padding-top: 13.5px;
+	padding-bottom: 17.5px;
 	padding-left: 22px;
 	text-align: left;
-	line-height: 30px;
-	background-color: #32425c;
 	border: none;
-	box-shadow: inset 0 -1px 0 0px #293449, 
+	box-shadow: 0 1px 0 0px #293449, 
 	inset 0 1px 0 0px #405069;
+	margin-bottom: 1px;
 }
 
 .button-service:hover {
@@ -495,42 +540,60 @@ a {
 .button-service:active {
 	background-color: #ffffff;
 	color: #32425c;
+	box-shadow: 0 1px 0 0px #ffffff, 
+	inset 0 1px 0 0px #ffffff;
 }
 
 .service-current {
 	color: #32425c;
 	background-color: #ffffff;
 	border: none;
-	box-shadow: none;
+	box-shadow: 0 1px 0 0px #ffffff, 
+	inset 0 1px 0 0px #ffffff;
 }
 
 .service-title {
-	font-size: 36px;
-	line-height: 36px;
+	font-size: 30px;
+	line-height: 30px;
 	color: #32425c;
 	font-weight: 400;
 	text-transform: uppercase;
 }
 
-.info-list {
-	font-size: 18px;
-	line-height: 20px;
+.button-credit {
+	display: block;
+	width: 195px;
+	font-size: 14px;
+	line-height: 18px;
+	font-weight: 400;
+	text-transform: uppercase;
+	text-align: center;
+	color: #ffffff;
+	background-color: #ff5357;
+	border-radius: 2px;
+	padding-top: 6.43px;
+	padding-bottom: 13.57px;
 }
 
 .info .section-title {
 	color: #000000;
 }
 
+.info-list {
+	font-size: 18px;
+	line-height: 24px;
+}
+
 .footer-main,
 .footer-main a {
 	font-size: 18px;
 	line-height: 24px;
-	color: #f3f7f9;
+	color: #f1f5f7;
 	background-color: #32425c;
 }
 
-.footer-main a {
-	color: #f1f5f7;
+.footer-address {
+	color: #f3f7f9;
 }
 
 .footer a:hover {
@@ -546,15 +609,11 @@ a {
 	color: #ffd180;
 }
 
-.copyrights a:active{
-	color: #ee3643;
-}
-
 .logo-footer img {
 	padding-top: 20px;
-	padding-right: 42px;
-	padding-bottom: 20px;
-	padding-left: 42px;
+	padding-right: 41px;
+	padding-bottom: 25px;
+	padding-left: 41px;
 }
 
 .copyrights,
@@ -569,20 +628,34 @@ a {
 	color: #ffd180;
 }
 
+.copyrights a:active{
+	color: #ee3643;
+	text-decoration: none;
+}
+
 /*--MODAL--*/ 
+.pop-up-shadow {
+	box-shadow: inset 0 7px 0 0 #ff5257,
+	0 4px 20px 0 rgba(0,0,0,0.15);
+}
+
 .write-us {
-	box-shadow: inset 0 7px 0 0 #ff5257;
+	width: 620px;
 }
 
 .write-us label {
 	font-size: 18px;
-	line-height: 18px;
+	line-height: 24px;
 }
 
 .write-us input,
 .write-us textarea {
-	border: 2px solid #dee3e4;
-	border-radius: 3px;
+	font-family: "PT Sans", "Arial", sans-serif;
+	font-size: 13px;
+	line-height: 24px;
+	padding: 7px 12px;
+	border: 2px solid #c5c5c5;
+	border-radius: 2px;
 }
 
 .write-us input::placeholder,
@@ -590,25 +663,53 @@ a {
 	color: #a9a9a9;
 	font-family: "PT Sans", "Arial", sans-serif;
 	font-size: 13px;
-	line-height: 18px;
-	padding-left: 13px;
-	padding-top: 7px;
+	line-height: 24px;
 }
 
 .modal-title {
+	font-size: 24px;
+	line-height: 30px;
+	font-weight: 700;
 	text-transform: none;
 	color: #000000;
-	font-weight: normal;
 }
 
 .button-area {
-	background-color: #f1f1f1;
+	background-color: #f4f4f4;
 	padding: 37px 80px;
+}
+
+.item-added {
+	width: 620px;
+	min-height: 282px: 
+}
+
+.item-added .button-area {
+	background-color: #f1f1f1;
+}
+
+.button-write-us {
+	width:100%;
 }
 
 .button-resume {
 	color: #000000;
 	background-color: #ffffff;
+	margin-left: 10px;
+}
+
+.button-resume:active {
+	color: #ffffff;
+}
+
+/*проверить - не работает внутренняя красная тень, на макете сделана просто картинкой*/
+.map-big {
+	box-shadow: inset 0 7px 0 0 #ff5257;
+}
+
+.on-the-map {
+	width: 943px;
+	min-height: 449px;
 }
 
 /*--CATALOG--*/
@@ -652,11 +753,10 @@ a {
 
 .column-title {
 	font-size: 13px;
-	line-height: 18px;
-	padding: 8px 15px;
+	padding: 10px 18px;
 	text-transform: uppercase;
 	background-color: #f7f3ec;
-	border-radius: 3px;
+	border-radius: 2px;
 }
 
 .filter-form {
@@ -683,16 +783,19 @@ a {
 	line-height: 18px;
 	text-align: center;
 	background-color: #f7f3ec;
-	border-radius: 3px;
+	border-radius: 2px;
 }
 
 .filter-block .dash {
+	font-size: 16px;
+	line-height: 18px;
+	color: #444444;
 	background-color: transparent;
 }
 
 .filter-producer-list label {
 	font-size: 15px;
-	line-height: 20px;
+	line-height: 19px;
 }
 
 .filter-block input:disabled + label {
@@ -704,16 +807,19 @@ a {
 	font-size: 13px;
 	line-height: 18px;
 	color: #000000;
+	padding: 10px 15px;
+	
 	background-color: transparent;
 	border: 1px solid #e5e5e5;
-	border-radius: 3px;
-	padding: 10px 15px;
-	padding-top: 9px;
-	padding-right: 14px;
+	border-radius: 2px;
+}
+
+.filter-show {
+	border-radius: 0px;
 }
 
 .button-action:hover {
-	border: 1px solid #bdc6ca;
+	border: 1px solid #c5c5c5;
 }
 
 .button-action:active {
